# VedicMathEngine

./: CMakeLists.txt  DOCUMENTATION.md  PROJECT_STRUCTURE.md  README.md  README_DYNAMIC.md  folder_str.py  main.py  simple_build_script.bat  windows_build_script.bat
benchmarks/: benchmark_main.c  vedicmath_benchmark.c  vedicmath_benchmark.h
cmake/: VedicMathConfig.cmake.in
docs/: Doxyfile.in
examples/: dispatch_demo.c  vedic_core_demo.c
frontend/: frontend.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: ArithmeticCalculator.jsx  BenchmarkViewer.jsx  LinearSolver.jsx  MatrixCalculator.jsx
frontend/src/hooks/: useApi.js
include/: dispatch_decision.h  dispatch_mixed_mode.h  unified_adaptive_dispatcher.h  utf8_console.h  vedic_core.h  vedicmath.h  vedicmath_build_info.h.in  vedicmath_dynamic.h  vedicmath_optimized.h  vedicmath_platform.h  vedicmath_types.h
python/: setup.py.in  vedicmath_c_wrapper.c  vedicmath_py.py
src/: vedic_core.c
src/benchmarks/: novel_benchmarking.c
src/common/: dispatch_mixed_mode.c  enhanced_dispatcher.c  vedicmath_dispatcher.c  vedicmath_operators.c  vedicmath_utils.c
src/core/: antyayordasake.c  dhvajanka_division.c  ekadhikena_purvena.c  ekanyunena_purvena.c  enhanced_division_dispatcher.c  nikhilam_division.c  nikhilam_navatashcaramam.c  paravartya_yojayet.c  puranapuranabhyam.c  sankalana_vyavakalanabhyam.c  shunyam_saamyasamuccaye.c  urdhva_tiryagbhyam.c  vedic_core.c  yaavadunam.c
src/dispatch/: dispatch_mixed_mode.c
src/dynamic/: vedicmath_dynamic.c  vedicmath_types.c
src/esp32/: CMakeLists.txt  esp32_vedic_main.c
src/optimized/: vedicmath_optimized.c
src/subsutra/: anurupyena.c  vestanam.c
src/unified/: unified_adaptive_dispatcher.c
tests/: debug_test.c  matrix_vedic_operations.c  platform_test.c  test_division_sutras.c  unified_dispatcher_test.c  vedicmath_dynamic_test.c  vedicmath_test.c  vedicmath_test_main.c  vedicmath_test_suite.c
tools/: dataset_generator.c
